# Project-HERA

./: .gitignore  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  main.c
